<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, leesearch!</string>
    <string name="app_name">理知道</string>
    <string name="Plsinput">请输入您想要搜索的图书</string>
    <string name="Btn_Search"> 搜 </string>
    <string name="Version">版本号：</string>
    <string name="Version_no">V0.1 给静静的圣诞礼物</string>
    <string name="result_name">搜索结果</string>
    <string name="location_name">书籍借阅</string>
    <string name="Progress_big_title">加载中</string>
    <string name="Progress_small_title">请稍等……</string>
    <string name="local_store">收藏</string>
    <string name="store_name">我的收藏夹</string>
    <string name="local_findmore">点击查看图书介绍</string>
    <string name="aboutautor">关于理知道</string>
    <string name="abouttext">理知道版本v1.15\n功能介绍：\n搜索图书，多关键字加空格\n长按书名可收藏\n查看书籍借阅情况，预约\n自习室可以在设置栏打开\n作者：曹建龙 朱静静 \n关注我的新浪微博：小脸龙\n邮箱:peter880313@gmail.com\n备注：理知道是一个开源的项目，欢迎大家提供BUG，希望大家能够帮助一起成长</string>
    <string name="Username">图书馆账户名</string>
    <string name="password">图书馆账户密码</string>
    <string name="ShowAvail">只显示可借书目</string>
    <string name="Mylib">我的图书馆</string>
    <string name="mylib_lend">已借书籍</string>
    <string name="mylib_reserve">已预约书籍</string>
    <string name="preq_text">图书预约</string>
    <string name="Classroom">自习室查询</string>
    <string name="NotifyService">到期通知小助手</string>

</resources>