<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2010 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:name="Lib Username"
        android:summary="图书馆帐号（学号）"
        android:defaultValue=""
        android:title="@string/Username"
        android:key="Libuser" />
    <EditTextPreference
        android:name="Lib Password"
        android:summary="图书馆密码"
        android:defaultValue=""
        android:title="@string/password"
        android:key="Libpass"
        android:password="true" />
    <CheckBoxPreference 
        android:title="@string/ShowAvail"
        android:key="Libshowavail"
        android:summary="只在搜索栏中显示可借的书籍"/>
    <CheckBoxPreference 
        android:title="@string/NotifyService"
        android:key="Libnotify"
        android:defaultValue="true"
        android:summary="提醒即将到期的书籍"/>
    <CheckBoxPreference
        android:title="@string/Classroom"
        android:key="OpenClassroom"
        android:defaultValue="false"
        android:summary="打开自习室功能"/>
</PreferenceScreen>
